<resources>
    <string name="app_name">GNPlayer</string>
    <string name="app_volume">Volume</string>
    <string name="app_music_pic">Music_pic</string>
    <string name="play"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="time_remain">0:0</string>
    <string name="total_time">0:0</string>
</resources>